--- a/YouTubeDownloader.csproj
+++ b/YouTubeDownloader.csproj
@@ -18,6 +18,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="VideoLibrary" Version="3.1.4" />
+		<PackageReference Include="WindowsAPICodePack-Shell" Version="1.1.1" />
 	</ItemGroup>
 
 	<ItemGroup>
